k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mmr
  labels:
    app.kubernetes.io/name: mmr
    azure.workload.identity/use: "true"
